[package]
name = "ssi-jwt"
version = "0.6.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of JWT for the ssi library."
repository = "https://github.com/ElevenID/ssi-jwt-elevenid"
documentation = "https://docs.rs/ssi-jwt/"

[dependencies]
thiserror = "2.0"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-syntax = { version = "0.12.5", features = ["serde"] }
ssi-core = { version = "0.3.0", default-features = false }
ssi-crypto = { version = "0.2.1", default-features = false }
ssi-jwk = { version = "0.4.0", default-features = false }
ssi-jws = { version = "0.5.0", default-features = false }
ssi-claims-core = { version = "0.2.0", default-features = false }
iref = { version = "4.2.0", features = ["serde"] }
hashbrown = "0.17.1"
slab = "0.4.9"
ordered-float = { version = "5.3.0", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
async-std = "1.9"
ssi-jws = { version = "0.5.0", default-features = false, features = ["secp256r1"] }
